compiler/tests/success/if_stmt.frx
i32 main()
{
    mut i32 ret = 0;

    if(true)
    {

    }
    else
    {
        ret = -1;
    }

    if(false)
    {
        ret = -1;
    }
    else
    {
        ret = 0;
    }

    return ret;
}
