compiler/tests/fail/ambiguous_global_var.frx
i32 var = -1;
i32 var = -1;

i32 main()
{
    return var;
}
